--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<a class="navbar-brand" href="index.html"><h1>Scholar </h1></a>
+					<a class="navbar-brand" href="index.html"><h1>Cal High CSF </h1></a>
 				</div>
 				<div id="navbar" class="navbar-collapse collapse">
 					<ul class="nav navbar-nav navbar-right">
@@ -67,11 +67,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
       <ul class="rslides callbacks callbacks1 agileits" id="slider4">
         <li id="callbacks1_s1" class="" style="float: none; position: absolute; opacity: 0; z-index: 1; display: list-item; transition: opacity 500ms ease-in-out;">
           <img src="images/b1.jpg" alt="home" />
-          <div class="caption text-center"><h3>Lorem ipsum dolor sit amet.</h3><p>Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet.</p></div>
+          <div class="caption text-center"><h3>Recognizing community service and academic excellence</p></div>
         </li>
 		 <li id="callbacks1_s2" class="" style="float: none; position: absolute; opacity: 0; z-index: 1; display: list-item; transition: opacity 500ms ease-in-out;">
           <img src="images/b2.jpg" alt="home" />
-          <div class="caption text-center"><h3>Lorem ipsum dolor sit amet.</h3><p>Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet.</p></div>
+          <div class="caption text-center"><h3>Recognizing community service and academic excellence</p></div>
         </li>
         <li id="callbacks1_s3" class="callbacks1_on" style="float: left; position: relative; opacity: 1; z-index: 2; display: list-item; transition: opacity 500ms ease-in-out;">
           <img src="images/b3.jpg" alt="home" />
